<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">



    <Button
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/btn_rules"
        android:onClick="btnRules"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="@drawable/round_button"
        android:text="@string/play"
        android:id="@+id/btn_play"
        android:onClick="btnPlay"
        android:layout_below="@id/btn_rules"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btn_start"
        android:onClick="btnStart"
        android:layout_below="@id/btn_play"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_second_text"
            android:id="@+id/btn_secondActivity"
            android:onClick="btnSdAct"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/btn_hello_world" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hello_world"
            android:id="@+id/tv_hello_world"
            android:gravity="center"
            android:layout_weight="1"

            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:id="@+id/btn_hello_world"
            android:layout_below="@+id/tv_hello_world"
            android:onClick="btnHwAct"
            android:layout_gravity="center_vertical" />
            -->
</RelativeLayout>